Improve visibility and avoid ui-size variance

--- a/prototype/style.css
+++ b/prototype/style.css
@@ -46,4 +46,8 @@ body {
 }
 #user-command:focus { border: 1px solid blue }
 
-#confirmation { width: 100% }
+#confirmation {
+	width: 100%;
+	height: 24px;
+	margin-top: 4px;
+}
